tests/snapshots/execution_spec__file-yaml-graphql.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type Query {
  expr_users: [User] @expr(body: {file: {src: "./tests/http/config/users.yml"}})
  users: [User] @file(src: "./tests/http/config/users.yml")
}

type User {
  id: Int
  name: String
}
