tests/snapshots/execution_spec__graphql-dataloader-batch-keys.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type A {
  b: B
  bid: Int!
  c: C
  cid: Int!
  id: Int!
}

type B {
  id: Int!
  y: String!
}

type C {
  id: Int!
  x: String!
}

scalar Email

type Query {
  a: [A]
}

schema {
  query: Query
}
