tests/snapshots/execution_spec__graphql-dataloader-batch-keys.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(hostname: "0.0.0.0", port: 8001, queryValidation: false) @upstream(baseURL: "http://upstream/graphql", batch: {delay: 1,headers: [],maxSize: 100}, httpCache: true) {
  query: Query
}

type A {
  b: B @graphQL(args: [{key: "id",value: "{{value.bid}}"}], batch: true, name: "b")
  bid: Int!
  c: C @graphQL(args: [{key: "id",value: "{{value.cid}}"}], batch: true, name: "c")
  cid: Int!
  id: Int!
}

type B {
  id: Int!
  y: String!
}

type C {
  id: Int!
  x: String!
}

type Query {
  a: [A] @graphQL(name: "posts")
}
