tests/snapshots/execution_spec__graphql-dataloader-no-batch-request.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @upstream(batch: {delay: 1, headers: [], maxSize: 100}) {
  query: Query
}

type Post {
  id: Int
  title: String
  user: User @graphQL(args: [{key: "id", value: "{{value.userId}}"}], baseURL: "http://upstream/graphql", name: "user")
  userId: Int
}

type Query {
  posts: [Post] @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/posts")
}

type User {
  id: Int
  name: String
}
