tests/snapshots/execution_spec__graphql-datasource-errors.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "name": null
      }
    },
    "errors": [
      {
        "locations": [
          {
            "column": 9,
            "line": 1
          }
        ],
        "message": "Failed to resolve user",
        "path": [
          "user"
        ]
      }
    ]
  }
}
