tests/snapshots/execution_spec__graphql-datasource-errors.md_assert_1.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "name": null,
        "id": 2
      }
    },
    "errors": [
      {
        "message": "Failed to resolve name",
        "locations": [
          {
            "line": 1,
            "column": 35
          }
        ]
      }
    ]
  }
}
