tests/snapshots/execution_spec__graphql-datasource-errors.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema {
  query: Query
}

type Query {
  user(id: Int): User @graphQL(args: [{key: "id", value: "{{args.id}}"}], baseURL: "http://upstream/graphql", name: "user")
}

type User {
  id: Int
  name: String
}
