tests/snapshots/execution_spec__graphql-datasource-errors.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": null
    },
    "errors": [
      {
        "message": "Failed to resolve user",
        "locations": [
          {
            "line": 1,
            "column": 9
          }
        ],
        "path": [
          "user"
        ]
      }
    ]
  }
}
